# NourisHer

./: .env.example  .gitignore  LICENSE  README.md  TRAINING_GUIDE.md  alembic.ini  docker-compose.yml  docs.md  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_initial.py
backend/: Dockerfile  __init__.py  main.py  requirements.txt
backend/core/: config.py  database.py  security.py
backend/models/: __init__.py  diet.py  other.py  profile.py  user.py
backend/routers/: auth.py  chat.py  community.py  content_cycle.py  diet.py  profile.py  user_content.py
backend/schemas/: auth.py  main.py
backend/services/: chatbot.py  diet_generator.py
configs/: system_prompt.txt
data/: pcos_data_cleaned.jsonl  pcos_final.jsonl  pcos_without_infertility.jsonl
database/: schema.sql
examples/: data.ndjson  finetune_example.jsonl
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/layout/: AppLayout.tsx
frontend/src/hooks/: useAuthStore.ts
frontend/src/pages/: AuthPage.tsx  ChatPage.tsx  CommunityPage.tsx  DietPage.tsx  HomePage.tsx  LearnPage.tsx  OnboardPage.tsx  ProfilePage.tsx
frontend/src/services/: api.ts
frontend/src/styles/: globals.css
ml/models/finetuned-llama/: README.md
notebooks/: PCOS_data_cleaning.ipynb
scripts/: finetune_pcos_lora.py  finetune_qlora.py
src/: main.py
src/api/: config.py  db.py  ml_model.py  models.py
src/api/routes/: stream.py
src/ml/data_cleaning/: dataframe.py
src/ml/models/: __init__.py  models.py
src/nourisher/: __init__.py  main.py
src/nourisher/api/: __init__.py  config.py  db.py  ml_model.py
src/nourisher/api/routes/: stream.py
src/nourisher/ml/: models.py
src/nourisher/ml/data_cleaning/: dataframe.py
src/nourisher/utils/: paths.py
src/utils/: paths.py
tests/: test_config.py  test_data_cleaning.py  test_db.py  test_finetune_pcos_lora.py  test_main.py  test_ml_model.py  test_sse_stream.py  test_stream.py
