[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NourisHer"
version = "0.1.0"
description = "PCOS-focused health platform built with FastAPI"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "Darsh Ayde", email = "darshayde@gmail.com" }
]

license = { text = "MIT" }

keywords = ["pcos", "health", "fastapi", "wellness", "api"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",  # PostgreSQL driver
    "httpx>=0.27.0",
    "orjson>=3.10.0",
    "loguru>=0.7.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "scripts*", "docs*", "examples*"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
